--- a/.github/workflows/https:/codeburst.io/build_test_react.yml
+++ b/.github/workflows/https:/codeburst.io/build_test_react.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build_test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
